<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg"
    tools:context=".ColorLearning">


    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/ImgDesc"

        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/back_icon" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:backgroundTint="#FFD600"
        android:fontFamily="@font/bubblegum_sans"
        android:shadowColor="#841818"
        android:text="@string/AppHead"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#473C02"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/backbtn"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/WhichColor"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="34sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="@+id/color_image"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/color_image"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.185" />

    <TextView
        android:id="@+id/alphabetButton"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/blue_bg"
        android:fontFamily="@font/bubblegum_sans"
        android:padding="15dp"
        android:text="@string/Dummy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/color_image"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="@+id/color_image"
        app:layout_constraintTop_toBottomOf="@+id/color_image"
        app:layout_constraintVertical_bias="0.344" />

    <ImageView
        android:id="@+id/color_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_above="@+id/alphabetButton"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignEnd="@+id/textView3"
        android:contentDescription="@string/ImgDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.477" />

    <ImageButton
        android:id="@+id/btnPrevious"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/next"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/ImgDesc"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="@+id/color_image"
        app:layout_constraintEnd_toStartOf="@+id/color_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/color_image"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/next"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/Dummy"
        app:layout_constraintBottom_toBottomOf="@+id/color_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/color_image"
        app:layout_constraintTop_toTopOf="@+id/color_image"
        tools:ignore="DuplicateSpeakableTextCheck,UnknownIdInLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>